--- a/views/quizzes/edit.ejs
+++ b/views/quizzes/edit.ejs
@@ -3,6 +3,6 @@
     Edit question:
 </h1>
 
-<form method="post" action="/quizzes/<%= quiz.id %>?_method=PUT" enctype="multipart/form-data" >
+<form method="post" action="/quizzes/<%= quiz.id %>?_method=PUT" >
     <% include _form.ejs %>
 </form>
