--- a/views/quizzes/index.ejs
+++ b/views/quizzes/index.ejs
@@ -1,64 +1,29 @@
 
-<div class="right">
-    <form method="get" action="<%= url %>">
-        <input type="text" name="search" value="<%= locals.search || '' %>" placeholder="question to search" autocomplete="off" />
-        <input type="submit" value="Search">
-
-        <% if (session.user) { %>
-            <br/>
-
-            <div>
-                <label>Solo favoritos:</label>
-                <input type="checkbox" name="searchfavourites"
-                       value="1" <%= locals.searchfavourites ? 'checked' : '' %> >
-                <img class="star" src="/images/star_yellow.png" \>
-            </div>
-        <% } %>
-
-    </form>
-</div>
-
 <h1>
-    <%= title || "Questions" %>:
+    Questions:
 </h1>
 
-<table id="quizzesIndex">
+<table>
     <% for (var i in quizzes) { %>
     <% var quiz = quizzes[i]; %>
     <tr>
-
         <td>
-            <% var attachment = quiz.attachment; %>
-            <% include ../attachments/_show %>
-        </td>
-
-        <td>
-            <% include ../favourites/_stars.ejs %>
-
             <a href="/quizzes/<%= quiz.id %>/play"><%= quiz.question %></a>
-            <br />
-            <small> (by <%= quiz.author ? quiz.author.username : "Anonymous" %>) </small>
         </td>
-
         <td>
-            <% if (session.user) { %>
-                <% if (session.user.isAdmin || session.user.id === quiz.authorId) { %>
-                        <a href="/quizzes/<%= quiz.id %>"><button>show</button></a>
-
-                        <a href="/quizzes/<%= quiz.id %>/edit"><button>edit</button></a>
-
-                        <a href="/quizzes/<%= quiz.id %>?_method=DELETE"
-                           onClick="return confirm('Delete: <%= quiz.question %>');">
-                            <button>delete</button>
-                        </a>
-                <% } %>
-            <% } %>
+            <a href="/quizzes/<%= quiz.id %>"><button>show</button></a>
         </td>
-
+        <td>
+            <a href="/quizzes/<%= quiz.id %>/edit"><button>edit</button></a>
+        </td>
+        <td>
+            <a href="/quizzes/<%= quiz.id %>?_method=DELETE"
+               onClick="return confirm('Delete: <%= quiz.question %>');">
+                <button>delete</button>
+            </a>
+        </td>
     </tr>
     <% } %>
 </table>
 
-<% if (session.user) { %>
-    <a href="/quizzes/new"><button type="button">Create New Question</button></a>
-<% } %>
+<a href="/quizzes/new"><button type="button">Create New Question</button></a>
