--- a/views/quizzes/new.ejs
+++ b/views/quizzes/new.ejs
@@ -2,7 +2,7 @@
     Add question:
 </h1>
 
-<form method="post" action="/quizzes" enctype="multipart/form-data" >
+<form method="post" action="/quizzes">
 
     <% include _form.ejs %>
 
