--- a/views/quizzes/result.ejs
+++ b/views/quizzes/result.ejs
@@ -1,3 +1,4 @@
+
 <h1>
     Result:
 </h1>
@@ -8,12 +9,8 @@
 
 <p>
     <% if (!result) { %>
-    <a href="/quizzes/<%= quiz.id %>/play?answer=<%= answer %>"> Try it again </a>
+       <a href="/quizzes/<%= quiz.id %>/play?answer=<%= answer %>"> Try it again </a>
     <% } %>
 </p>
-<p>
-    Puntuacion actual:<b><%= quiz.score%></b>
-</p>
 
-<a href="/quizzes/randomplay"><button>Seguir jugando</button></a>
-<a href="/quizzes"><button>Volver </button></a>
+<a href="/quizzes"><button>Go back</button></a>
