--- a/views/tips/index.ejs
+++ b/views/tips/index.ejs
@@ -6,16 +6,21 @@
         <% var accepted = tip.accepted; %>
         <% var isAdmin = session.user && session.user.isAdmin; %>
         <% var isQuizAuthor = session.user && quizAuthorId && quizAuthorId === session.user.id; %>
+        <% var isTipAuthor = session.user && tip.author.username && tip.author.username === session.user.username; %>
 
         <% if (accepted || isAdmin || isQuizAuthor) { %>
 
             <li>
                 <%= tip.text %>
+                    Pista creada por:
+                        <span id="autor">
+                            <%= tip.author.username %>
+                        </span>
 
                 <% if (!accepted && (isAdmin || isQuizAuthor)) { %>
 
                     <a href="/quizzes/<%= quizId %>/tips/<%= tip.id %>/accept?_method=PUT">
-                        <button>Accept</button>
+                        <button>Aceptar</button>
                     </a>
 
                 <% } %>
@@ -23,7 +28,7 @@
                 <% if (isAdmin || isQuizAuthor) { %>
 
                     <a href="/quizzes/<%= quizId %>/tips/<%= tip.id %>?_method=DELETE">
-                        <button>Delete</button>
+                        <button>Borrar</button>
                     </a>
 
                 <% } %>
